# bisign

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: error.rs  lib.rs  main.rs
src/commands/: keygen.rs  sign.rs  verify.rs
src/types/: mod.rs  private_key.rs  public_key.rs  signature.rs
