[package]
name = "bisign"
version = "0.1.2"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
clap = "2.33"
openssl = "0.10"
byteorder = "1.3"
pbo = {git = "https://github.com/synixebrett/pbo-rs"}