[package]
name = "bisign"
version = "0.3.1"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
lazy_static = "1.4"
clap = "2.33"
openssl = "0.10"
byteorder = "1.3"
pbo = {git = "https://github.com/synixebrett/pbo-rs"}
